Bug 168344 - When i use the highlighter tool, the rest of the line after the highlighted content goes all white.
Summary: When i use the highlighter tool, the rest of the line after the highlighted ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.3
Keywords: bibisected, bisected, regression
: 168282 168563 (view as bug list)
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2025-09-10 11:08 UTC by sabatm
Modified: 2025-09-26 15:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Video clearly describing the issue. (853.28 KB, video/mp4)
2025-09-10 11:10 UTC, sabatm
Details
video testing the bug (7.77 MB, video/webm)
2025-09-11 05:12 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sabatm 2025-09-10 11:08:49 UTC
Description:
When i use the highlighter tool, rest of the line after the highlighted content goes all white. This applies to a dark theme. Light theme does not show this phenomenon. Using openSUSE Tumbbleweed with GNOME on Wayland.

Steps to Reproduce:
1. Set a dark theme in the Writer.
2. Write some text on multiple lines.
3. Try to highlight a part of the text with the highlighter tool.

Actual Results:
Rest of the text background on the line after the highlighted content goes all white and unreadable. (Like if it would highlight the rest of the text white)

Expected Results:
Writer not highlighting anything not selected and not in a different color than selected.


Reproducible: Always


User Profile Reset: No

Additional Info:
That's all.
Comment 1 sabatm 2025-09-10 11:10:07 UTC
Created attachment 202772 [details]
Video clearly describing the issue.
Comment 2 Telesto 2025-09-11 03:02:49 UTC
Is this a general issue. Even with a new blank document with few lines of text? Or specific to certain file (or even file format)
Comment 3 BogdanB 2025-09-11 05:10:48 UTC
I confirm with a dark theme, "Use white document background" needs to be unchecked, and Document background "Automatic".

Just highlight some words/characters from a line and all the line became white and can not be read anymore.

I will make a video in a moment.

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2025-09-11 05:12:32 UTC
Created attachment 202785 [details]
video testing the bug
Comment 5 BogdanB 2025-09-11 05:16:43 UTC
*** Bug 168282 has been marked as a duplicate of this bug. ***
Comment 6 kaesezeh 2025-09-11 15:23:26 UTC
Update: It seems this is restricted to LibreOffice Writer on Linux (POP OS): when I open the same doc in LO 25.8.1.1  on Win 11, things seem to be ok.
Comment 7 kaesezeh 2025-09-11 15:24:18 UTC
I have so far only encountered this with this one document.
Comment 8 sabatm 2025-09-12 05:25:10 UTC
I am encountering it with every new or later opened document with already written text, tested with DOCX and ODT.
Comment 9 Xisco Faulí 2025-09-18 14:22:31 UTC
I can't reproduce it in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81321560f2151ee12be26135aed65968287d1c94
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 10 Xisco Faulí 2025-09-18 14:24:46 UTC
it seems the issue is fixed in master but not in libreoffice-25-8
Comment 11 Radovan Saban 2025-09-18 14:30:08 UTC
(In reply to Xisco Faulí from comment #10)
> it seems the issue is fixed in master but not in libreoffice-25-8

Can you try to explain this for us less educated in this area 😆
Comment 12 BogdanB 2025-09-18 14:34:45 UTC
(In reply to Xisco Faulí from comment #10)
> it seems the issue is fixed in master but not in libreoffice-25-8

Confirm. Fixed on master, still on 25.8.
Comment 13 Xisco Faulí 2025-09-18 14:53:09 UTC
Regression introduced by

commit e0d4d178caff1414a9a21fa57f06bc8d4d2c389a	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jan 13 15:03:05 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jan 14 15:47:13 2025 +0100
tree 2ac5062c997ee9a3a29e61f1e1039595468117c8
parent 3eaa35e8bacc19a85f5c9d907450846bfa8bffae [diff]

Change alpha behavour of OutputDevice::SetFillColor

and later fixed by

commit 878dd795378776253e6c49d58805a219e0b8c33e	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jun 30 12:00:42 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jun 30 17:49:51 2025 +0200
tree 761bfe1e5dac1943a7d693632712ab2448875b76
parent 066744b8f869f432857eb6bfa56634ef227f6d57 [diff]

tdf#166842 do not use FillColor==COL_TRANSPARENT...

Which has been backported to libreoffice-25-8 branch in https://gerrit.libreoffice.org/c/core/+/191135
Comment 14 BogdanB 2025-09-18 15:00:47 UTC
If was backported to 25.8 on June 30, why we don't have this in a version from last week?
Comment 15 Commit Notification 2025-09-18 21:16:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/ef0fd8bfab009f939432eb7f24bc6604dcc90caf

tdf#168344, tdf#166842 do not use FillColor==COL_TRANSPARENT...

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2025-09-19 07:02:22 UTC
I do confirm the issue is fixed in

Version: 25.8.3.0.0+ (X86_64) / LibreOffice Community
Build ID: ef0fd8bfab009f939432eb7f24bc6604dcc90caf
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 17 BogdanB 2025-09-26 15:09:28 UTC
*** Bug 168563 has been marked as a duplicate of this bug. ***