tdf#168344, tdf#166842 do not use FillColor==COL_TRANSPARENT...

.. on OutputDevice if that OutputDevice does not support alpha

Change-Id: I52f8a496127462deecba9cf6fd19f827466d16cb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187181
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 878dd795378776253e6c49d58805a219e0b8c33e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191135
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>